**pnp-0.6.2 ??/??/2009**

  * Bugfix: Wrong pdf link used on site 'pages' and 'basket'
  * Bugfix: Incorrect group permissions on spool directory

**pnp-0.6.1 11/22/2009**

  * Feature: RRD heartbeat per check_command -> [[tpl_custom]] 
  * Feature: New config.php option pdf_graph_opt 
  * Feature: Recognize the 'background_pdf' option in page definitions -> [[pages]]
  * Feature: Recognize the 'source' option in page definitions -> [[pages]]
  * Feature: Array $TIMERANGE now available for templates -> [[timeranges]]
  * Bugfix:  ./configure --sysconfdir no longer ignored
  * Feature: Store internal runtime statistics on a per minute base 
  * Feature: Added two widgets views/widget_menu.php and views/widget_graph.php 

**pnp-0.6.0 10/30/2009**

  * Webfrontend based on [[http://www.kohanaphp.com|Kohana]]
  * Webfrontend based on [[http://jqueryui.com/themeroller/|jQuery Themes]]
  * Javascript-functions using [[http://jquery.com/|jQuery]] plugins  
  * process_perfdata.pl will be able to use one RRD database per datasource
  * improved installer. Specification of directory layouts using --with-layout
  * RRDtool errors are now displayed as images. no more missing images
  * PNP templates cannot overwrite internal variables anymore
  * PNP templates of version 0.4.x can still be used
  * PDF functions recoded
  * Template default.php optimized
  * Export from RRD databases into XML, CSV and JSON format using the RRDtool "xport" function
  * Page functions recoded
  * Error pages links to online FAQ
  * Mouseover Popup in Nagios frontend via jQuery.clueTip plugin
  * Full support of rrdcached