@@ -49,14 +49,14 @@ foreach($this->data->STRUCT as $key=>$value){
     echo "</tr></table>\n";
     echo "</div>\n";
     echo "<div class=\"p4 gh ui-widget-content ui-corner-bottom\">\n";
-    echo "<a href=\"".url::base()."graph?host=" 
+    echo "<a href=\"".url::base(TRUE)."graph?host=" 
 		.$value['MACRO']['HOSTNAME'] . "&srv=" 
 		.$value['MACRO']['SERVICEDESC'] ."\" title=\""
 		.Kohana::lang('common.host',$value['MACRO']['DISP_HOSTNAME']) . " "
 		.Kohana::lang('common.service',$value['MACRO']['DISP_SERVICEDESC']) . " " 
 		.Kohana::lang('common.datasource',$value['ds_name']) . " " 
 		."\">\n";
-	echo "<img src=\"".url::base()."image?host=" . $value['MACRO']['HOSTNAME'] . "&srv=" . $value['MACRO']['SERVICEDESC'] . "&view=" . $value['VIEW'] . "&source=" . $value['SOURCE'] . "&start=" . $value['TIMERANGE']['start'] ."&end=" . $value['TIMERANGE']['end'] . "\"></a>\n";
+	echo "<img src=\"".url::base(TRUE)."image?host=" . $value['MACRO']['HOSTNAME'] . "&srv=" . $value['MACRO']['SERVICEDESC'] . "&view=" . $value['VIEW'] . "&source=" . $value['SOURCE'] . "&start=" . $value['TIMERANGE']['start'] ."&end=" . $value['TIMERANGE']['end'] . "\"></a>\n";
     echo "</div><p>\n";
 }
 echo "</div>\n";
