@@ -6,7 +6,8 @@
 <div class="p4 ui-widget-content ui-corner-bottom">
 <?php
 foreach($services as $service){
-	echo "<a href=\"".$this->uri->string()."?host=".$host."&srv=".$service['name']."\" class=\"multi".$service['is_multi']."\" title=\"".$service['servicedesc']."\">".pnp::shorten($service['servicedesc'])."</a><br>\n";
+	$path = pnp::addToUri( array('host' => $host, 'srv' => $service['name']) );
+	echo "<a href=\"".$path."\" class=\"multi".$service['is_multi']."\" title=\"".$service['servicedesc']."\">".pnp::shorten($service['servicedesc'])."</a><br>\n";
 }
 ?>
 </div>
